...
    garageViewModel: GarageViewModel,
    vehicleForEdit: Vehicle?,
    onDismiss: () -> Unit
) {
    val coroutineScope = rememberCoroutineScope()

    val vehicleName = remember {
        mutableStateOf(
            vehicleForEdit?.name ?: ""
        )
    }

    val modelState = remember {
...
                        AsyncImage(
                            model = iconUri.value!!,
                            contentDescription = "Selected image",
                            modifier = Modifier
                                .size(64.dp)
                                .clip(RoundedCornerShape(16.dp))
                                .testTag("vehicleIcon")
                                .clickable {
                                    launcher.launch("image/*")
                                },
                            contentScale = ContentScale.Crop
                        )
                    } else {
...
                )
                Spacer(Modifier.height(8.dp))
                OutlinedTextField(
                    modifier = Modifier
                        .fillMaxWidth()
                        .padding(horizontal = 16.dp, vertical = 8.dp)
                        .testTag("vehicleMake"),
                    singleLine = true,
                    value = makeState.value,
                    shape = RoundedCornerShape(24.dp),
                    onValueChange = { make ->
                        makeState.value = make
                    },
...
                )
                Spacer(Modifier.height(8.dp))
                OutlinedTextField(
                    modifier = Modifier
                        .fillMaxWidth()
                        .padding(horizontal = 16.dp, vertical = 8.dp)
                        .testTag("vehicleModel"),
                    singleLine = true,
                    value = modelState.value,
                    shape = RoundedCornerShape(24.dp),
                    onValueChange = { model ->
                        modelState.value = model
                    },
...
                )
                Spacer(Modifier.height(8.dp))
                OutlinedTextField(
                    modifier = Modifier
                        .fillMaxWidth()
                        .padding(horizontal = 16.dp, vertical = 8.dp)
                        .testTag("vehicleVIN"),
                    singleLine = true,
                    value = vinState.value,
                    shape = RoundedCornerShape(24.dp),
                    onValueChange = { vin ->
                        vinState.value = vin
                    },
...
                ) {
                    Spacer (Modifier.weight(1f))
                    Button(
                        modifier = Modifier
                            .wrapContentWidth()
                            .height(45.dp)
                            .testTag("addVehicleSubmit"),
                        enabled = vehicleName.value.isNotEmpty() &&
                                makeState.value.isNotEmpty() &&
                                vinState.value.isNotEmpty() &&
                                yearState.intValue != -1 &&
                                fuelType.value != FuelType.NONE,
                        onClick = {
...
                    }
                    Spacer (Modifier.weight(1f))
                    Button(
                        modifier = Modifier
                            .wrapContentWidth()
                            .height(45.dp)
                            .testTag("addVehicleCancel"),
                        enabled = true,
                        onClick = {
                            onDismiss()
                        }
                    ) {
                        Text(text = "Cancel")
...
