...
    
    ExposedDropdownMenuBox(
        modifier = Modifier
            .fillMaxWidth()
            .wrapContentHeight()
            .background(color = getTheme().secondaryContainer, shape = RoundedCornerShape(8.dp))
            .testTag("yearDropdown"),
        expanded = expanded,
        onExpandedChange = {
            expanded = !expanded
        }) {
        TextField(
            value = selectedYear,
...

    ExposedDropdownMenuBox(
        modifier = Modifier
            .fillMaxWidth()
            .wrapContentHeight()
            .background(color = getTheme().secondaryContainer, shape = RoundedCornerShape(8.dp))
            .testTag("fuelDropdown"),
        expanded = expanded,
        onExpandedChange = {
            expanded = !expanded
        }) {
        TextField(
            value = selectedFuelType.name.lowercase().replaceFirstChar { it.uppercase() },
...
